did the random jode functionality

--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,82 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Agdasima:wght@400;700&family=Alan+Sans:wght@300..900&family=Alata&family=Alfa+Slab+One&family=Anton&family=Average&family=Catamaran:wght@100..900&family=Geist:wght@100..900&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Jaro:opsz@6..72&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Share+Tech+Mono&family=VT323&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
+  font-family: "Alan Sans", sans-serif;
+}
+
+.joke-body {
+  height: 100vh;
+  width: 100vw;
+  padding: 1rem;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.4rem;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.display {
+  min-width: 400px;
+  min-height: 50px;
+  background-color: hsl(350, 100%, 96%);
+  border-radius: .5rem;
+  border: 1px solid hsla(0, 0%, 0%, .2);
   text-align: center;
+  text-wrap: wrap;
+  padding: .6rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.joke-btn {
+  font-family: "Alan Sans", sans-serif;
+  background-color: yellowgreen;
+  border: 1px solid hsla(0, 0%, 0%, .2);
+  padding: .5rem 1rem;
+  border-radius: .4rem;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  transition: all 200ms;
+
+  &:hover {
+    scale: 1.03;
+  }
+  &:active {
+    scale: 1;
+  }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.tool-bar {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  gap: .2rem;
+}
+
+.tool-btn {
+  background-color: transparent;
+  color: hsl(0, 0%, 30%);
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: .2rem;
+  border-radius: .3rem;
+
+  & svg {
+    width: 1.2rem;
+    height: 1.2rem;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  &:hover {
+    background-color: hsl(350, 100%, 95%);
   }
 }
